fix overflow bug

--- a/lambda-notes/src/App.css
+++ b/lambda-notes/src/App.css
@@ -80,7 +80,7 @@ h1, .error-title {
   margin-bottom: 33px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  padding: 10px 10px 15px;
+  padding: 15px;
 }
 .note-title {
   text-transform: capitalize;
@@ -102,6 +102,7 @@ h1, .error-title {
 }
 .card-wrapper {
   display: flex;
+  text-align: left;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -109,20 +110,14 @@ h1, .error-title {
   font-family: 'Lato', serif;
   padding-top: 12px;
 }
-
-.note-card {
-  text-align: left;
-  padding-left: 15px;
-  padding-right: 15px;
-}
+ 
 .note-card .note-title{
   margin-top: 5px;
   padding: 5px 0px 5px;
   border-bottom: 1.5px solid #000;
 }
-.note-textBody {
-  margin-top: 15px;
-  text-align: left;
+.note-title {
+  min-height: 75px;
 }
 .note-card a:hover {
   text-decoration: none;
